styles/recipe.css
body {
    background: linear-gradient(to bottom, #D6F3FB 58.33%, #FFFFFF 100%);
}

.intro {
    margin-top: 2%;
    display: inline-block;
}

.image {
    float: right;
}

.heading {
    font-family: 'Alegreya Sans Sc';
    font-weight: 700;
    margin-left: 2%;
    font-size: 4vw;
}

.rating span {
    font-size: 20px;
    margin-top: 1%;
    margin-left: 2%;
}

img {
    width: 30% !important;
    height: 30% !important;
    float: right;
}

p {
    padding: 0;
    margin-right: 0 !important;
    width: 40%;
    margin-top: 2% !important;
    margin-left: 2%;
    font-family: 'Alegreya Sans';
    font-size: 2vw;
    display: inline-block;
}

.stats {
    display: inline-block;
    margin-right: 30px;
    margin-left: 2%;
}

.stats span {
    font-size: 22px !important;
}

.stats h6 {
    display: inline-block;
    font-family: 'Alegreya Sans SC';
    font-weight: 700;
    font-size: 20px;
}

.stats h6:last-child,
.stats span:last-child {
    float: right;
}

.stats h6:first-child {
    margin-right: 15px;
}

.extra-info {
    float: right;
    border: 2px solid black;
    border-radius: 5px;
}

